Fixed error missing color variable

--- a/app/assets/stylesheets/session.scss
+++ b/app/assets/stylesheets/session.scss
@@ -1,29 +1,30 @@
 // Place all the styles related to the session controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+@import "variables";
 
-.form-row{
-	background-color: $background-color;
-	border-radius: 2rem;
-	
-	label{
-		color: white;
-	}
+.form-row {
+  background-color: $background-color;
+  border-radius: 2rem;
 
-	button{
-		display: block;
-		margin: auto;
-	}
+  label {
+    color: white;
+  }
 
-	.links{
-		.btn-social{
-			max-width: 17rem;
-		}
+  button {
+    display: block;
+    margin: auto;
+  }
 
-		a{
-			color: white !important;
-		}
-	}
+  .links {
+    .btn-social {
+      max-width: 17rem;
+    }
+
+    a {
+      color: white !important;
+    }
+  }
 
 }
 
